--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         
         <label for="businessName">Legal Business Name:</label>
         <input type="text" id="businessName" name="businessName" required><br><br>
+
+        <label for="phone">Phone:</label>
+        <input type="text" id="phone" name="phone" required><br><br>
+
+        <label for="email">Email ID:</label>
+        <input type="text" id="email" name="email" required><br><br>
         
         <label for="equipmentType">Equipment Type:</label>
         <select id="equipmentType" name="equipmentType" required>
