--- a/index.html
+++ b/index.html
@@ -40,17 +40,26 @@
     <script>
         document.getElementById('financingForm').addEventListener('submit', function(e) {
             e.preventDefault();
+
             const formData = new FormData(this);
-            fetch('https://your-salesforce-instance.com/services/apexrest/LeadCapture', {
+            const formObject = Object.fromEntries(formData);
+
+            fetch('https://ucf8-dev-ed.develop.my.salesforce.com/services/apexrest/LeadCapture', {
                 method: 'POST',
-                body: JSON.stringify(Object.fromEntries(formData)),
+                body: JSON.stringify(formObject),
                 headers: {
                     'Content-Type': 'application/json'
                 }
             })
             .then(response => response.json())
-            .then(data => alert('Application submitted successfully!'))
-            .catch(error => console.error('Error:', error));
+            .then(data => {
+                alert('Application submitted successfully!');
+                this.reset();
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('An error occurred. Please try again.');
+            });
         });
     </script>
 </body>
