--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             const formData = new FormData(this);
             const formObject = Object.fromEntries(formData);
 
-            fetch('https://ucf8-dev-ed.develop.my.salesforce.com/services/apexrest/LeadCapture', {
+            fetch('https://ucf8-dev-ed.develop.my.salesforce-sites.com/services/apexrest/LeadCapture', {
                 method: 'POST',
                 body: JSON.stringify(formObject),
                 headers: {
