--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="logo_url_here" alt="JR Capital Logo">
+            <img src="JRCapitalLogo.png" alt="JR Capital Logo">
         </div>
         <h1>Funding Application</h1>
         <form id="financingForm">
